@@ -13,8 +13,9 @@
               destdir="build"
               target="${yukon.javac.target}" 
               source="${yukon.javac.source}"
-              bootclasspath="${yukon.javac.bootclasspath}"
               debug="${yukon.javac.debug}">
+           <compilerarg value="--add-modules"/>
+           <compilerarg value="java.desktop"/>
           <classpath>
              <fileset dir="${yukon.lib}">
                 <include name="**/*.jar"/>
